--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -1,10 +1,16 @@
 .grid-container {
     display: grid;
-    gap: 1px; /* adjust to your desired gap between grid items */
-    height: 100vh;
-    width: 100vw;
+    /* gap: 1px; */
+    height: 99vh;
+    width: 99vw;
   }
   
-  .grid-item {
-    border: 1px solid black; /* Optional, just to visualize the grid items */
+  .dead {
+    border: 1px solid black;
+    background-color: black;
+  }
+
+  .alive{
+    border: 1px solid black;
+    background-color: red;
   }
